# GDELT_csv_reader

./: LICENSE  README.md  config.py  db_schema.py  gdelt_downloader.py  pyproject.toml  python
Notebooks/: Data Download.ipynb
tests/: test_gdelt_downloader.py
