[project]
name = "gdelt-csv-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.37",
    "sqlmodel>=0.0.22",
    "tqdm>=4.67.1",
    "wget>=3.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "aider-chat>=0.71.1",
    "pytest-mock>=3.14.0",
]
